--- a/Final Project/spruce.html
+++ b/Final Project/spruce.html
@@ -5,17 +5,25 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="spruce.css" rel="stylesheet" type="text/css">
+        <link href="style.css" rel="stylesheet" type="text/css">
         <title>Ivy Cottage Tree Farm </title>
     </head>
 
 <body>
-    <nav>
-        <ul>
-            <a href="#about"><li>About</li></a>
-            <a href="#location"><li>Location</li></a>
-            <a href="#contact"><li>Contact Us</li></a>
-        </ul>
+    <nav class="navbar fixed-top navbar-expand-lg bg-black">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#title">
+            <img src="Resources/treeline.jpg" alt="Logo" width="40" height="auto" class="d-inline-block align-text-top">
+            <b id='logoColour'>Ivy Cottage Tree Farm </b>
+            </a>
+           
+            <ul>
+            <a href="index.html" href="#about"><li>About</li></a>
+            <a href="index.html" href="#location"><li>Location</li></a>
+            <a href="index.html" href="#contact"><li>Contact Us</li></a>
+            </ul>
+
+        </div>
     </nav>
 
     <div class="title">
