creating firewood link

--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -57,6 +57,10 @@
     
         </div>
     </div>
+    
+    <div class="container2">
+        <h2>Fire Wood</h2>
+    </div>
 
     <footer>
         <div id="details">
