--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -59,7 +59,8 @@
     </div>
     
     <div class="container2">
-        <h2>Fire Wood</h2>
+        <h2>Firewood</h2>
+        <a href="firewood.html"> <img src="Resources/firewood.jpg" /> </a>
     </div>
 
     <footer>
