--- a/Final Project/spruce.html
+++ b/Final Project/spruce.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="style.css" rel="stylesheet" type="text/css">
+        <link href="spruce.css" rel="stylesheet" type="text/css">
         <title>Ivy Cottage Tree Farm </title>
     </head>
 
