--- a/Final Project/firewood.html
+++ b/Final Project/firewood.html
@@ -21,12 +21,12 @@
   </head>
 
   
-  <body>
+  <body class="bg-dark text-antiquewhite">
     <nav class="navbar fixed-top navbar-expand-lg bg-black">
         <div class="container-fluid">
             <a class="navbar-brand" href="#title">
             <img src="Resources/treeline.jpg" alt="Logo" width="40" height="auto" class="d-inline-block align-text-top">
-            <b id='logoColour'>Ivy Cottage Tree Farm </b>
+            <b class='logoColour'>Ivy Cottage Tree Farm </b>
             </a>
            
             <ul>
