change size of fire wood image

--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -61,7 +61,7 @@
     
     <div class="container2">
         <h2>Firewood</h2>
-        <a href="firewood.html"> <img src="Resources/firewood.jpg" /> </a>
+        <a href="firewood.html"> <img src="Resources/firewood.jpg" height="400px" width="600px"  /> </a>
     </div>
 
     <footer>
