--- a/Final Project/firewood.html
+++ b/Final Project/firewood.html
@@ -56,7 +56,7 @@
           Please give us a call or email us to get the most up to date prices and to confirm we deliver to your area. If you email, please let us know whether you want hardwood or softwood.</p>
         </div>
       </main>
-      <script src="./js/app.js"></script>
+      <script src="app.js"></script>
     </body>
     <footer>
         <h2>Contact Us</h2>
