--- a/Final Project/spruce.html
+++ b/Final Project/spruce.html
@@ -6,8 +6,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-        <link href="spruce.css" rel="stylesheet" type="text/css">
         <link href="style.css" rel="stylesheet" type="text/css">
+        <link href="spruce.css" rel="stylesheet" type="text/css">
         <title>Ivy Cottage Tree Farm </title>
     </head>
 
@@ -18,7 +18,7 @@
             <img src="Resources/treeline.jpg" alt="Logo" width="40" height="auto" class="d-inline-block align-text-top">
             <b id='logoColour'>Ivy Cottage Tree Farm </b>
             </a>
-           
+
             <ul>
             <a href="index.html" href="#about"><li>About</li></a>
             <a href="index.html" href="#location"><li>Location</li></a>
@@ -35,24 +35,27 @@
 
 
     </div>
-    
-  <main> 
-    <h1>Norway Spruce</h1>
-      <div class="row">
-  <div class="column"></div>
 
-</div>
-    <p><h2>Choosing And Buying Your Tree</h2>
-    <h3> The type of tree you need depends on the style you like, how long you want it to last for and how much you want to pay.
+  <main>
+    <h1>Norway Spruce</h1>
+
+    <p>
+        <h2>Choosing And Buying Your Tree</h2>
+
+        <h3>
+        The type of tree you need depends on the style you like, how long you want it to last for and how much you want to pay.
         You can pick a Norway Spruce or a Fir tree growing in the ground, label it and return nearer the time to collect. A Norway Spruce can be supplied potted, rootballed or cut whilst a Fir will need to be cut (because of its extensive root system). Although we regularly stock trees up to about 12 foot, if you require anything larger please let us know as we will get larger trees to order from our other plantations.
-        Measure the height of your room and work out how tall you need the tree to be. You do not want a tiny tree that looks lost in a high-ceilinged room or to end up having to chop a bit off the top off it. You would be surprised how often that happens!</h3>
+        Measure the height of your room and work out how tall you need the tree to be. You do not want a tiny tree that looks lost in a high-ceilinged room or to end up having to chop a bit off the top off it. You would be surprised how often that happens!
+        </h3>
 <img src="Resources/norway-spruce.jpg" id= "centre" height= "100px" width= "100px" />
-          <div class="column"></div>
       <h4>Is this the tree for you?</h4>
-<ul><li>Pointed midgreen needles standing on tiny pegs</li>
-    <li>Long cylindrical brown cones which hang down</li>
-    <li>Natural range: Northern and Central Europe</li></ul></p>
-   
+        <ul>
+            <li>Pointed midgreen needles standing on tiny pegs</li>
+            <li>Long cylindrical brown cones which hang down</li>
+            <li>Natural range: Northern and Central Europe</li>
+        </ul>
+</p>
+
 
     <footer>
         <div id="details">
