--- a/Final Project/firewood.html
+++ b/Final Project/firewood.html
@@ -54,6 +54,7 @@
         </p>
         <video width="570" height="321" controls autoplay>
           <source src="ivy-cottage.mp4" type="video/mp4" />
+           <a href="ivy-cottage.mp4">MP4</a>
         </video>
         <p>
           The wood is air dried as we believe that is better for the environment
