--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -59,7 +59,8 @@
         growing tree, you can reserve it early and collect it nearer the time;
         ensuring it is as fresh as possible. We are proud to be members of the
         British Christmas Tree Growers' Association. We are open from November
-        20th until the 24th December from 9am-5pm, seven days a week.
+        20th until the 24th December from 9am-5pm, seven days a week. How are
+        you
       </p>
     </div>
 
